# datalogi

./: README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: python.yml
docs/: index.md
docs/css/: mkdocstrings.css
tests/: __init__.py
